[metadata]
name = neutron-classifier
summary =  Neutron Common Classification Framework
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Neutron/CommonClassificationFramework
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_classifier

[entry_points]
neutron.service_plugins =
    neutron_classifier = neutron_classifier.services.classification.plugin:ClassificationPlugin
openstack.neutronclient.v2 =
    network classification ethernet create = neutron_classifier.cli.openstack_cli.eth_classification:CreateEthernetClassification
    network classification ethernet delete = neutron_classifier.cli.openstack_cli.eth_classification:DeleteEthernetClassification
    network classification ethernet list = neutron_classifier.cli.openstack_cli.eth_classification:ListEthernetClassification
    network classification ethernet show = neutron_classifier.cli.openstack_cli.eth_classification:ShowEthernetClassification
    network classification ethernet update = neutron_classifier.cli.openstack_cli.eth_classification:UpdateEthernetClassification
    network classification ipv4 create = neutron_classifier.cli.openstack_cli.ipv4_classification:CreateIPV4Classification
    network classification ipv4 delete = neutron_classifier.cli.openstack_cli.ipv4_classification:DeleteIPV4Classification
    network classification ipv4 list = neutron_classifier.cli.openstack_cli.ipv4_classification:ListIPV4Classification
    network classification ipv4 show = neutron_classifier.cli.openstack_cli.ipv4_classification:ShowIPV4Classification
    network classification ipv4 update = neutron_classifier.cli.openstack_cli.ipv4_classification:UpdateIPV4Classification
    network classification ipv6 create = neutron_classifier.cli.openstack_cli.ipv6_classification:CreateIPV6Classification
    network classification ipv6 delete = neutron_classifier.cli.openstack_cli.ipv6_classification:DeleteIPV6Classification
    network classification ipv6 list = neutron_classifier.cli.openstack_cli.ipv6_classification:ListIPV6Classification
    network classification ipv6 show = neutron_classifier.cli.openstack_cli.ipv6_classification:ShowIPV6Classification
    network classification ipv6 update = neutron_classifier.cli.openstack_cli.ipv6_classification:UpdateIPV6Classification
    network classification tcp create = neutron_classifier.cli.openstack_cli.tcp_classification:CreateTCPClassification
    network classification tcp delete = neutron_classifier.cli.openstack_cli.tcp_classification:DeleteTCPClassification
    network classification tcp list = neutron_classifier.cli.openstack_cli.tcp_classification:ListTCPClassification
    network classification tcp show = neutron_classifier.cli.openstack_cli.tcp_classification:ShowTCPClassification
    network classification tcp update = neutron_classifier.cli.openstack_cli.tcp_classification:UpdateTCPClassification
    network classification udp create = neutron_classifier.cli.openstack_cli.udp_classification:CreateUDPClassification
    network classification udp delete = neutron_classifier.cli.openstack_cli.udp_classification:DeleteUDPClassification
    network classification udp list = neutron_classifier.cli.openstack_cli.udp_classification:ListUDPClassification
    network classification udp show = neutron_classifier.cli.openstack_cli.udp_classification:ShowUDPClassification
    network classification udp update = neutron_classifier.cli.openstack_cli.udp_classification:UpdateUDPClassification
    network classification type list = neutron_classifier.cli.openstack_cli.classification_type:ListClassificationType
    network classification group create = neutron_classifier.cli.openstack_cli.classification_group:CreateClassificationGroup
    network classification group delete = neutron_classifier.cli.openstack_cli.classification_group:DeleteClassificationGroup
    network classification group list = neutron_classifier.cli.openstack_cli.classification_group:ListClassificationGroup
    network classification group show = neutron_classifier.cli.openstack_cli.classification_group:ShowClassificationGroup
    network classification group update = neutron_classifier.cli.openstack_cli.classification_group:UpdateClassificationGroup
neutron.db.alembic_migrations =
    neutron-classifier = neutron_classifier.db.migration:alembic_migrations
neutron.agent.l2.extensions =
    neutron_classifier = neutron_classifier.services.classification.l2_extension:NeutronClassifierExtension

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron_classifier/locale
domain = neutron_classifier

[update_catalog]
domain = neutron_classifier
output_dir = neutron_classifier/locale
input_file = neutron_classifier/locale/neutron-classifier.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_classifier/locale/neutron-classifier.pot
